# commander

./: CMakeLists.txt  README.md  build.sh  conanfile.py  configure.sh  justfile  requirements.txt
docs/: Doxyfile  basics.rst  classes.rst  conf.py  functions.rst  index.rst  installing.rst  reference.rst
dump/: commander.h  interactive_connector.h  module copy.h  socker_connector.h
examples/: CMakeLists.txt  build.sh  conanfile.py  conanfile.txt  configure.sh  justfile  test.ipynb
examples/src/: client.cpp  example.cpp  gyro.cpp
include/commander/: commander.h  function_parser.h  module.h  registry.h  server.h
include/commander/client/: socket.h
include/commander/server/: interactive.h  interface.h  single_command.h  socket.h
src/: commander.cpp  registry.cpp  server.cpp
src/client/: socket.cpp
src/server/: interactive.cpp  single_command.cpp  socket.cpp
tools/: configure_conan.sh
